--- a/account/register.html
+++ b/account/register.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon_io/favicon-16x16.png"/>
     <link rel="stylesheet" href="../css/styles.css"/>
     <link rel="stylesheet" href="../css/login-register.css"/>
-    <title>Login</title>
+    <title>Register</title>
     <script src="https://kit.fontawesome.com/5d32d5fe01.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,23 +21,36 @@
 </head>
 <body>
 <form id="form">
-    <div class="login-header">
-        <h2>Login</h2>
-        <i class="fa-solid fa-key"></i>
+    <div class="register-header">
+        <h2>Register</h2>
+        <i class="fa-solid fa-user-plus"></i>
     </div>
     <div class="email">
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
     </div>
+    <div class="username">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required>
+    </div>
     <div class="password">
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
     </div>
-    <button type="submit" class="btn-black" id="login-btn">Login</button>
-    <div class="register">
-        <p>No account?</p>
-        <a href="register.html">Register</a>
+    <div class="repeat-password">
+        <label for="repeat-password">Repeat Password:</label>
+        <input type="password" id="repeat-password" name="repeat-password" required>
     </div>
+    <div class="avatar">
+        <label for="avatar">Avatar url:</label>
+        <input type="url" id="avatar" name="avatar" placeholder="optional">
+    </div>
+    <div class="bio">
+        <label for="bio">bio:</label>
+        <textarea id="bio" name="bio" placeholder="optional"></textarea>
+    </div>
+    <button type="submit" class="btn-black" id="login-btn">Register</button>
+
     <div id="message"></div>
 </form>
 
