added login and register function
- added javascript functional for login by using POST request and store token in local storage to be redirect to admin page

- add javascript functionality for register page using POST request with pop up message to be redirected to login page

--- a/account/login.html
+++ b/account/login.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../css/login-register.css"/>
     <title>Login</title>
     <script src="https://kit.fontawesome.com/5d32d5fe01.js" crossorigin="anonymous"></script>
+    <script src="../javascript/login.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
@@ -27,7 +28,7 @@
     </div>
     <div class="email">
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="email" placeholder="youremail@stud.noroff.no" required>
     </div>
     <div class="password">
         <label for="password">Password:</label>
