--- a/account/register.html
+++ b/account/register.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../css/styles.css"/>
     <link rel="stylesheet" href="../css/login-register.css"/>
     <title>Register</title>
+    <script src="../javascript/register.js" defer></script>
     <script src="https://kit.fontawesome.com/5d32d5fe01.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,19 +28,19 @@
     </div>
     <div class="email">
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="email" placeholder="required" required>
     </div>
     <div class="username">
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
+        <input type="text" id="username" name="username" placeholder="required" required>
     </div>
     <div class="password">
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" id="password" name="password" placeholder="required" required>
     </div>
     <div class="repeat-password">
         <label for="repeat-password">Repeat Password:</label>
-        <input type="password" id="repeat-password" name="repeat-password" required>
+        <input type="password" id="repeat-password" name="repeat-password" placeholder="required" required>
     </div>
     <div class="avatar">
         <label for="avatar">Avatar url:</label>
@@ -49,10 +50,16 @@
         <label for="bio">bio:</label>
         <textarea id="bio" name="bio" placeholder="optional"></textarea>
     </div>
-    <button type="submit" class="btn-black" id="login-btn">Register</button>
+    <button type="submit" class="btn-black" id="register-btn">Register</button>
 
     <div id="message"></div>
 </form>
+
+<div class="overlay"></div>
+<div class="successful">
+    <p>Registration successful!</p>
+    <button class="btn-black" id="go-to-login">login</button>
+</div>
 
 </body>
 </html>
