--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <title>Mum, how do I...?</title>
     <script src="https://kit.fontawesome.com/5d32d5fe01.js" crossorigin="anonymous"></script>
     <script src="javascript/banner-carousel.js" defer></script>
+    <script src="javascript/highlight-display.js" defer></script>
+    <script src="javascript/carousel-display.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
@@ -99,22 +101,22 @@
                 New recipes
             </h3>
             <div class="carousel" data-carousel>
-                <div data-slides>
+                <div class="carousel-display" data-slides>
                     <a href="#" class="slide" id="slide-1">
                         <div class="slide-overlay">
-                            <h3 class="slide-title">1</h3>
+                            <h3 class="slide-title"></h3>
                             <p class="slide-text"></p>
                         </div>
                     </a>
                     <a href="#" class="slide" id="slide-2">
                         <div class="slide-overlay">
-                            <h3 class="slide-title">2</h3>
+                            <h3 class="slide-title"></h3>
                             <p class="slide-text"></p>
                         </div>
                     </a>
                     <a href="#" class="slide" id="slide-3">
                         <div class="slide-overlay">
-                            <h3 class="slide-title">3</h3>
+                            <h3 class="slide-title"></h3>
                             <p class="slide-text"></p>
                         </div>
                     </a>
@@ -136,28 +138,7 @@
             <h3>
                 Highlight
             </h3>
-            <div class="highlight-display">
-                <div class="highlight-content">
-                    <a class="highlight-thumbnail">
-                    </a>
-                    <h4>Title</h4>
-                </div>
-                <div class="highlight-content">
-                    <a class="highlight-thumbnail">
-                    </a>
-                    <h4>Title</h4>
-                </div>
-                <div class="highlight-content">
-                    <a class="highlight-thumbnail">
-                    </a>
-                    <h4>Title</h4>
-                </div>
-                <div class="highlight-content">
-                    <a class="highlight-thumbnail">
-                    </a>
-                    <h4>Title</h4>
-                </div>
-            </div>
+            <div class="highlight-display"></div>
         </div>
         <div class="main-contents">
             <h3>
