--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="javascript/banner-carousel.js" defer></script>
     <script src="javascript/highlight-display.js" defer></script>
     <script src="javascript/carousel-display.js" defer></script>
+    <script src="javascript/posts-display.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
@@ -144,116 +145,7 @@
             <h3>
                 More recipes
             </h3>
-            <div class="main-contents-display">
-                <a href="#" class="main-contents-container">
-                    <div class="main-contents-thumbnail">
-                        <div class="main-contents-overlay"></div>
-                        <h4>Title</h4>
-                    </div>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                    </p>
-                </a>
-                <a href="#" class="main-contents-container">
-                    <div class="main-contents-thumbnail">
-                        <div class="main-contents-overlay"></div>
-                        <h4>Title</h4>
-                    </div>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                    </p>
-                </a>
-                <a href="#" class="main-contents-container">
-                    <div class="main-contents-thumbnail">
-                        <div class="main-contents-overlay"></div>
-                        <h4>Title</h4>
-                    </div>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                    </p>
-                </a>
-                <a href="#" class="main-contents-container">
-                    <div class="main-contents-thumbnail">
-                        <div class="main-contents-overlay"></div>
-                        <h4>Title</h4>
-                    </div>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                    </p>
-                </a>
-                <a href="#" class="main-contents-container">
-                    <div class="main-contents-thumbnail">
-                        <div class="main-contents-overlay"></div>
-                        <h4>Title</h4>
-                    </div>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                    </p>
-                </a>
-                <a href="#" class="main-contents-container">
-                    <div class="main-contents-thumbnail">
-                        <div class="main-contents-overlay"></div>
-                        <h4>Title</h4>
-                    </div>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                    </p>
-                </a>
-                <a href="#" class="main-contents-container">
-                    <div class="main-contents-thumbnail">
-                        <div class="main-contents-overlay"></div>
-                        <h4>Title</h4>
-                    </div>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                    </p>
-                </a>
-                <a href="#" class="main-contents-container">
-                    <div class="main-contents-thumbnail">
-                        <div class="main-contents-overlay"></div>
-                        <h4>Title</h4>
-                    </div>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                    </p>
-                </a>
-                <a href="#" class="main-contents-container">
-                    <div class="main-contents-thumbnail">
-                        <div class="main-contents-overlay"></div>
-                        <h4>Title</h4>
-                    </div>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                    </p>
-                </a>
-                <a href="#" class="main-contents-container">
-                    <div class="main-contents-thumbnail">
-                        <div class="main-contents-overlay"></div>
-                        <h4>Title</h4>
-                    </div>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                    </p>
-                </a>
-                <a href="#" class="main-contents-container">
-                    <div class="main-contents-thumbnail">
-                        <div class="main-contents-overlay"></div>
-                        <h4>Title</h4>
-                    </div>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                    </p>
-                </a>
-                <a href="#" class="main-contents-container">
-                    <div class="main-contents-thumbnail">
-                        <div class="main-contents-overlay"></div>
-                        <h4>Title</h4>
-                    </div>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                    </p>
-                </a>
-            </div>
+            <div class="main-contents-display"></div>
         </div>
     </div>
 </main>
