--- a/post.html
+++ b/post.html
@@ -6,13 +6,13 @@
     <meta name="Mum, how do I...?" content="cooking good is cooking mum's way"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta property="og:image" content="assets/favicon_io"/>
-    <link rel="icon" type="image/png" sizes="180x180" href="../assets/favicon_io/apple-touch-icon.png"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon_io/favicon-32x32.png"/>
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon_io/favicon-16x16.png"/>
-    <link rel="stylesheet" type="text/css" href="../css/styles.css"/>
-    <link rel="stylesheet" type="text/css" href="../css/post-public.css"/>
+    <link rel="icon" type="image/png" sizes="180x180" href="assets/favicon_io/apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png"/>
+    <link rel="stylesheet" type="text/css" href="css/styles.css"/>
+    <link rel="stylesheet" type="text/css" href="css/post-public.css"/>
     <title>Mum, how do I...?</title>
-    <script src="../javascript/post-link.js"></script>
+    <script src="javascript/post-link.js"></script>
     <script src="https://kit.fontawesome.com/5d32d5fe01.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,9 +25,9 @@
 <header>
 
     <div class="header">
-        <img class="logo" alt="logo" aria-label="logo of mum, how do I...?" src="../assets/logo.png">
+        <img class="logo" alt="logo" aria-label="logo of mum, how do I...?" src="assets/logo.png">
         <nav>
-            <a href="../index.html" aria-label="click to go to homepage">
+            <a href="index.html" aria-label="click to go to homepage">
                 home
             </a>
             <a href="#" aria-label="click to go to blog page">
@@ -131,13 +131,13 @@
             </div>
             <div class="social-media">
                 <a href="#" aria-label="click to go to facebook page">
-                    <img class="social-media-icon" alt="facebook-icon" src="../assets/social-media/facebook.png">
+                    <img class="social-media-icon" alt="facebook-icon" src="assets/social-media/facebook.png">
                 </a>
                 <a href="#" aria-label="click to go to instagram page">
-                    <img class="social-media-icon" alt="instagram-icon" src="../assets/social-media/instagram.png">
+                    <img class="social-media-icon" alt="instagram-icon" src="assets/social-media/instagram.png">
                 </a>
                 <a href="#" aria-label="click to go to pinterest page">
-                    <img class="social-media-icon" alt="interest-icon" src="../assets/social-media/pinterest.png">
+                    <img class="social-media-icon" alt="interest-icon" src="assets/social-media/pinterest.png">
                 </a>
             </div>
         </div>
@@ -173,7 +173,7 @@
 </main>
 
 <footer>
-    <img class="logo-footer" alt="logo" aria-label="logo of mum, how do I...?" src="../assets/logo.png">
+    <img class="logo-footer" alt="logo" aria-label="logo of mum, how do I...?" src="assets/logo.png">
     <div class="subscribe-footer">
         <label for="email-input" id="email-input-label">
             Stay updated
@@ -187,13 +187,13 @@
         <h4>Follow us</h4>
         <div class="social-media-icon-container">
             <a href="#" aria-label="click to go to facebook page">
-                <img class="social-media-icon" alt="facebook-icon" src="../assets/social-media/facebook.png">
+                <img class="social-media-icon" alt="facebook-icon" src="assets/social-media/facebook.png">
             </a>
             <a href="#" aria-label="click to go to instagram page">
-                <img class="social-media-icon" alt="instagram-icon" src="../assets/social-media/instagram.png">
+                <img class="social-media-icon" alt="instagram-icon" src="assets/social-media/instagram.png">
             </a>
             <a href="#" aria-label="click to go to pinterest page">
-                <img class="social-media-icon" alt="interest-icon" src="../assets/social-media/pinterest.png">
+                <img class="social-media-icon" alt="interest-icon" src="assets/social-media/pinterest.png">
             </a>
         </div>
     </div>
