--- a/post.html
+++ b/post.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
     <link rel="stylesheet" type="text/css" href="css/post-public.css"/>
     <title>Mum, how do I...?</title>
-    <script src="javascript/post-link.js"></script>
+    <script src="javascript/post-link.js" defer></script>
+    <script src="javascript/related-recipes.js" defer></script>
     <script src="https://kit.fontawesome.com/5d32d5fe01.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -145,28 +146,7 @@
             <h3>
                 Related recipes
             </h3>
-            <div class="related-display">
-                <div class="related-content">
-                    <a class="related-thumbnail">
-                    </a>
-                    <h4>Title</h4>
-                </div>
-                <div class="related-content">
-                    <a class="related-thumbnail">
-                    </a>
-                    <h4>Title</h4>
-                </div>
-                <div class="related-content">
-                    <a class="related-thumbnail">
-                    </a>
-                    <h4>Title</h4>
-                </div>
-                <div class="related-content">
-                    <a class="related-thumbnail">
-                    </a>
-                    <h4>Title</h4>
-                </div>
-            </div>
+            <div class="related-content"></div>
         </div>
     </div>
 
