added backend integration to post new
- edited some codes to related recipe to display matched tags. Wasn't successful
- added preview div html structure to post new page

--- a/edit.html
+++ b/edit.html
@@ -6,12 +6,12 @@
     <meta name="Mum, how do I...?" content="cooking good is cooking mum's way"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta property="og:image" content="assets/favicon_io"/>
-    <link rel="icon" type="image/png" sizes="180x180" href="../assets/favicon_io/apple-touch-icon.png"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon_io/favicon-32x32.png"/>
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon_io/favicon-16x16.png"/>
-    <link rel="stylesheet" href="../css/styles.css"/>
-    <link rel="stylesheet" href="../css/make.css"/>
-    <link rel="stylesheet" href="../css/admin-bg-header.css"/>
+    <link rel="icon" type="image/png" sizes="180x180" href="assets/favicon_io/apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png"/>
+    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="css/make.css"/>
+    <link rel="stylesheet" href="css/admin-bg-header.css"/>
     <title>Edit post</title>
     <script src="https://kit.fontawesome.com/5d32d5fe01.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +25,7 @@
 <header>
 
     <div class="header">
-        <img class="logo" alt="logo" aria-label="logo of mum, how do I...?" src="../assets/logo.png">
+        <img class="logo" alt="logo" aria-label="logo of mum, how do I...?" src="assets/logo.png">
         <a href="admin.html" class="admin">
             <i class="fa-regular fa-user"></i>
             <h3>admin</h3>
