--- a/make.html
+++ b/make.html
@@ -6,13 +6,14 @@
     <meta name="Mum, how do I...?" content="cooking good is cooking mum's way"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta property="og:image" content="assets/favicon_io"/>
-    <link rel="icon" type="image/png" sizes="180x180" href="../assets/favicon_io/apple-touch-icon.png"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon_io/favicon-32x32.png"/>
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon_io/favicon-16x16.png"/>
-    <link rel="stylesheet" href="../css/styles.css"/>
-    <link rel="stylesheet" href="../css/make.css"/>
-    <link rel="stylesheet" href="../css/admin-bg-header.css"/>
+    <link rel="icon" type="image/png" sizes="180x180" href="assets/favicon_io/apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png"/>
+    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="css/make.css"/>
+    <link rel="stylesheet" href="css/admin-bg-header.css"/>
     <title>Post new</title>
+    <script src="javascript/post-new.js" defer></script>
     <script src="https://kit.fontawesome.com/5d32d5fe01.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +26,7 @@
 <header>
 
     <div class="header">
-        <img class="logo" alt="logo" aria-label="logo of mum, how do I...?" src="../assets/logo.png">
+        <img class="logo" alt="logo" aria-label="logo of mum, how do I...?" src="assets/logo.png">
         <a href="admin.html" class="admin">
             <i class="fa-regular fa-user"></i>
             <h3>admin</h3>
@@ -66,10 +67,18 @@
         </div>
         <div class="btns-container">
             <button class="btn-black">preview</button>
-            <button class="btn-black">save</button>
-            <button class="btn-red">clear</button>
+            <button type="submit" class="btn-black">save</button>
         </div>
     </form>
+
+    <div id="preview">
+            <h3 id="preview-title"></h3>
+            <div id="preview-img"></div>
+            <p id="preview-body"></p>
+        <div class="btns-container">
+            <button class="btn-white">close</button>
+        </div>
+    </div>
 
 </main>
 
