--- a/edit-post.html
+++ b/edit-post.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io/favicon-32x32.png"/>
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png"/>
     <link rel="stylesheet" href="css/styles.css"/>
-    <link rel="stylesheet" href="css/make.css"/>
+    <link rel="stylesheet" href="css/new-post.css"/>
     <link rel="stylesheet" href="css/admin-bg-header.css"/>
     <title>Edit post</title>
     <script src="https://kit.fontawesome.com/5d32d5fe01.js" crossorigin="anonymous"></script>
