--- a/register.html
+++ b/register.html
@@ -6,13 +6,13 @@
     <meta name="Mum, how do I...?" content="cooking good is cooking mum's way"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta property="og:image" content="assets/favicon_io"/>
-    <link rel="icon" type="image/png" sizes="180x180" href="../assets/favicon_io/apple-touch-icon.png"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon_io/favicon-32x32.png"/>
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon_io/favicon-16x16.png"/>
-    <link rel="stylesheet" href="../css/styles.css"/>
-    <link rel="stylesheet" href="../css/login-register.css"/>
+    <link rel="icon" type="image/png" sizes="180x180" href="assets/favicon_io/apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png"/>
+    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="css/login-register.css"/>
     <title>Register</title>
-    <script src="../javascript/register.js" defer></script>
+    <script src="javascript/register.js" defer></script>
     <script src="https://kit.fontawesome.com/5d32d5fe01.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
