--- a/new-post.html
+++ b/new-post.html
@@ -99,4 +99,9 @@
 </main>
 
 </body>
+
+<!--Added script here due to using the same js as edit-post but different method for API to avoid error line-->
+<script>
+    formData.addEventListener('submit', handleFormSubmission("POST", "new-post"));
+</script>
 </html>
