finalized backend-integration
- fixed some payload on registration

--- a/register.html
+++ b/register.html
@@ -21,6 +21,7 @@
           rel="stylesheet">
 </head>
 <body>
+
 <form id="form">
     <div class="register-header">
         <h2>Register</h2>
@@ -28,7 +29,7 @@
     </div>
     <div class="email">
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" placeholder="required" required>
+        <input type="email" id="email" name="email" placeholder="youremail@stud.noroff.no" required>
     </div>
     <div class="username">
         <label for="username">Username:</label>
