added pagination functionality
added pagination functionality so user can click next or previous button to view certain amount of posts per page

--- a/index.html
+++ b/index.html
@@ -145,7 +145,18 @@
             <h3>
                 More recipes
             </h3>
-            <div class="main-contents-display"></div>
+            <div class="main-contents">
+                <div class="main-contents-display"></div>
+                <div id="pagination">
+                    <button id="previous">
+                        < Previous
+                    </button>
+                    <p id="current-page"></p>
+                    <button id="next">
+                        Next >
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
 </main>
