added view all button
- added view all button
- added function to change header by category

--- a/browse.html
+++ b/browse.html
@@ -95,11 +95,12 @@
             main-course
         </button>
     </div>
-
-    <div class="contents">
+    <button class="btn-black" id="view-all">
+        view all
+    </button>
         <div class="main-contents">
-            <h3>
-                More recipes
+            <h3 id="header">
+                All recipes
             </h3>
             <div class="main-contents">
                 <div class="main-contents-display"></div>
@@ -114,7 +115,6 @@
                 </div>
             </div>
         </div>
-    </div>
 </main>
 
 <footer>
