added pagination function to admin page

--- a/admin.html
+++ b/admin.html
@@ -90,6 +90,15 @@
             </button>
         </div>
     </div>
+    <div id="pagination">
+        <button id="previous">
+            < Previous
+        </button>
+        <p id="current-page"></p>
+        <button id="next">
+            Next >
+        </button>
+    </div>
 
 </main>
 
