added filter function to admin page
added filter function to admin page in the form of dropdown list.

--- a/admin.html
+++ b/admin.html
@@ -57,12 +57,25 @@
             <button id="filter" class="btn-black">
                 filter by
             </button>
-            <ul class="filter-dropdown">
-                <li id="asian">asian</li>
-                <li id="soup">soup</li>
-                <li id="salad">salad</li>
-                <li id="pasta">pasta</li>
-                <li id="main-course">main-course</li>
+            <ul id="filter-dropdown">
+                <li>
+                    <button class="filter-btn" id="asian">asian</button>
+                </li>
+                <li>
+                    <button class="filter-btn" id="salad">salad</button>
+                </li>
+                <li>
+                    <button class="filter-btn" id="soup">soup</button>
+                </li>
+                <li>
+                    <button class="filter-btn" id="pasta">pasta</button>
+                </li>
+                <li>
+                    <button class="filter-btn" id="main-course">main-course</button>
+                </li>
+                <li>
+                    <button class="filter-btn" id="view-all">view all</button>
+                </li>
             </ul>
         </div>
         <button class="btn-black" id="post-new">
