added search function to admin page

--- a/admin.html
+++ b/admin.html
@@ -84,7 +84,7 @@
         <div class="search">
             <input type="text" id="search-input">
             <label for="search-input" id="search-input-label">
-                <button class="btn-black">
+                <button id="search-btn" class="btn-black">
                     search
                 </button>
             </label>
