cleaned up some codes and deleted unnecessary lines

--- a/index.html
+++ b/index.html
@@ -46,22 +46,16 @@
     <div class="header">
         <img class="logo" alt="logo" aria-label="logo of mum, how do I...?" src="assets/logo.png">
         <nav>
-            <a href="#" aria-label="click to go to homepage">
+            <a href="index.html" aria-label="click to go to homepage">
                 home
             </a>
-            <a href="#" aria-label="click to go to blog page">
+            <a href="browse.html" aria-label="click to go to blog page">
                 blog
             </a>
-            <a href="#" aria-label="click to go to about">
-                about
-            </a>
         </nav>
-        <div class="search">
-            <label for="search-input" id="search-label">
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </label>
-            <input type="text" id="search-input">
-        </div>
+        <a href="browse.html" class="search">
+            <i class="fa-solid fa-magnifying-glass"></i>
+        </a>
     </div>
 </header>
 
