cleaned-up codes
- added utils and functions page to reuse functions and not have too many duplicated lines
- added to search functionality that it will match for tags as well as titles

--- a/edit-post.html
+++ b/edit-post.html
@@ -13,9 +13,10 @@
     <link rel="stylesheet" href="css/new-post.css"/>
     <link rel="stylesheet" href="css/admin-bg-header.css"/>
     <title>Edit post</title>
-    <script src="javascript/edit-post.js" defer></script>
-    <script src="javascript/new-post.js" defer></script>
-    <script src="javascript/admin-header.js" defer></script>
+    <script type="module" src="javascript/utils.js" defer></script>
+    <script type="module" src="javascript/functions.js" defer></script>
+    <script type="module" src="javascript/admin-header.js" defer></script>
+    <script type="module" src="javascript/edit-new-post.js" defer></script>
     <script src="https://kit.fontawesome.com/5d32d5fe01.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
