--- a/admin.html
+++ b/admin.html
@@ -14,8 +14,11 @@
     <link rel="stylesheet" href="css/admin-bg-header.css"/>
     <title>Admin</title>
     <script src="https://kit.fontawesome.com/5d32d5fe01.js" crossorigin="anonymous"></script>
-    <script src="javascript/admin-header.js" defer></script>
-    <script src="javascript/admin.js" defer></script>
+    <script type="module" src="javascript/utils.js" defer></script>
+    <script type="module" src="javascript/functions.js" defer></script>
+    <script type="module" src="javascript/admin-header.js" defer></script>
+    <script type="module" src="javascript/admin.js" defer></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
