--- a/browse.html
+++ b/browse.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8"/>
     <meta name="Mum, how do I...?" content="cooking good is cooking mum's way"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta property="og:image" content="assets/favicon_io"/>
     <link rel="icon" type="image/png" sizes="180x180" href="assets/favicon_io/apple-touch-icon.png"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io/favicon-32x32.png"/>
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png"/>
     <link rel="stylesheet" href="css/styles.css"/>
     <link rel="stylesheet" href="css/index.css"/>
     <link rel="stylesheet" href="css/browse.css"/>
     <title>Mum, how do I...?</title>
     <script src="https://kit.fontawesome.com/5d32d5fe01.js" crossorigin="anonymous"></script>
-    <script src="javascript/posts-display.js" defer></script>
+    <script type="module" src="javascript/utils.js" defer></script>
+    <script type="module" src="javascript/posts-display.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
@@ -24,7 +22,6 @@
 <body>
 
 <header>
-
     <div class="banner" aria-label="picture of a daughter cooking with her mum">
         <div class="welcome-text-background">
             <div class="line"></div>
@@ -46,84 +43,63 @@
     <div class="header">
         <img class="logo" alt="logo" aria-label="logo of mum, how do I...?" src="assets/logo.png">
         <nav>
-            <a href="#" aria-label="click to go to homepage">
+            <a href="index.html" aria-label="click to go to homepage">
                 home
             </a>
-            <a href="#" aria-label="click to go to blog page">
+            <a href="browse.html" aria-label="click to go to blog page">
                 blog
-            </a>
-            <a href="#" aria-label="click to go to about">
-                about
             </a>
         </nav>
         <div class="search">
-            <label for="search-input" id="search-label">
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </label>
-            <input type="text" id="search-input">
+            <label for="search-input"><i class="fa-solid fa-magnifying-glass"></i></label>
+            <input type="text" id="search-input" placeholder="Search...">
         </div>
     </div>
 </header>
 
 <main>
-
     <div class="category-container">
         <button id="asian">
-            <span id="asian-img">
-            </span>
+            <span id="asian-img"></span>
             Asian
         </button>
         <button id="salad">
-            <span id="salad-img">
-            </span>
+            <span id="salad-img"></span>
             salad
         </button>
         <button id="soup">
-            <span id="soup-img">
-            </span>
+            <span id="soup-img"></span>
             soup
         </button>
         <button id="pasta">
-            <span id="pasta-img">
-            </span>
+            <span id="pasta-img"></span>
             pasta
         </button>
         <button id="main-course">
-            <span id="main-course-img">
-            </span>
+            <span id="main-course-img"></span>
             main-course
         </button>
     </div>
     <button class="btn-black" id="view-all">
         view all
     </button>
-            <h3 id="header">
-                All recipes
-            </h3>
-            <div class="main-contents">
-                <div class="main-contents-display"></div>
-                <div id="pagination">
-                    <button id="previous">
-                        < Previous
-                    </button>
-                    <p id="current-page"></p>
-                    <button id="next">
-                        Next >
-                    </button>
-                </div>
-            </div>
+    <h3 id="header">All recipes</h3>
+    <div class="main-contents">
+        <div class="main-contents-display"></div>
+    </div>
+    <div id="pagination">
+        <button id="previous"> < Previous </button>
+        <p id="current-page"></p>
+        <button id="next">Next ></button>
+    </div>
 </main>
 
 <footer>
     <img class="logo-footer" alt="logo" aria-label="logo of mum, how do I...?" src="assets/logo.png">
     <div class="subscribe-footer">
-        <label for="email-input" id="email-input-label">
-            Stay updated
-        </label>
+        <label for="email-input" id="email-input-label">Stay updated</label>
         <input type="email" id="email-input">
-        <button class="btn-black" aria-label="click to subscribe">
-            subscribe
-        </button>
+        <button class="btn-black" aria-label="click to subscribe">subscribe</button>
     </div>
     <div class="social-media-footer">
         <h4>Follow us</h4>
