--- a/single-post.html
+++ b/single-post.html
@@ -12,8 +12,9 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
     <link rel="stylesheet" type="text/css" href="css/single-post.css"/>
     <title>Mum, how do I...?</title>
-    <script src="javascript/link-single-post.js" defer></script>
-    <script src="javascript/related-recipes.js" defer></script>
+    <script type="module" src="javascript/utils.js" defer></script>
+    <script type="module" src="javascript/link-single-post.js" defer></script>
+    <script type="module" src="javascript/related-recipes.js" defer></script>
     <script src="https://kit.fontawesome.com/5d32d5fe01.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
