--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                 More recipes
             </h3>
             <div class="main-contents-display"></div>
+            <button class="btn-black see-more">see more recipes...</button>
         </div>
     </div>
 </main>
