--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/styles.css"/>
     <link rel="stylesheet" href="css/login-register.css"/>
     <title>Register</title>
-    <script type="module" src="javascript/login-register.js" defer></script>
+    <script type="module" src="javascript/register.js" defer></script>
     <script src="https://kit.fontawesome.com/5d32d5fe01.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
