fixed search function
fixed searched function to adjust header

--- a/browse.html
+++ b/browse.html
@@ -84,6 +84,7 @@
         view all
     </button>
     <h3 id="header">All recipes</h3>
+    <p id="no-recipe-found">No recipes found</p>
     <div class="main-contents">
         <div class="main-contents-display"></div>
     </div>
