made single post respnsive

--- a/single-post.html
+++ b/single-post.html
@@ -32,11 +32,8 @@
             <a href="index.html" aria-label="click to go to homepage">
                 home
             </a>
-            <a href="#" aria-label="click to go to blog page">
+            <a href="browse.html" aria-label="click to go to blog page">
                 blog
-            </a>
-            <a href="#" aria-label="click to go to about">
-                about
             </a>
         </nav>
         <div class="search">
@@ -129,7 +126,6 @@
             </div>
             <div class="author-detail">
                 <h4 class="author-name"></h4>
-                <p class="bio"></p>
             </div>
             <div class="social-media">
                 <a href="#" aria-label="click to go to facebook page">
