--- a/edit-post.html
+++ b/edit-post.html
@@ -13,9 +13,7 @@
     <link rel="stylesheet" href="css/new-post.css"/>
     <link rel="stylesheet" href="css/admin-bg-header.css"/>
     <title>Edit post</title>
-    <script type="module" src="javascript/utils.js" defer></script>
-    <script type="module" src="javascript/functions.js" defer></script>
-    <script type="module" src="javascript/admin-header.js" defer></script>
+    <script type="module" src="javascript/admin.js" defer></script>
     <script type="module" src="javascript/edit-post.js" defer></script>
     <script type="module" src="javascript/make-post.js" defer></script>
     <script src="https://kit.fontawesome.com/5d32d5fe01.js" crossorigin="anonymous"></script>
