--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/login-register.css"/>
     <title>Login</title>
     <script src="https://kit.fontawesome.com/5d32d5fe01.js" crossorigin="anonymous"></script>
-    <script type="module" src="javascript/login.js" defer></script>
+    <script type="module" src="javascript/app.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
