--- a/edit-post.html
+++ b/edit-post.html
@@ -53,7 +53,7 @@
         < Back to admin
     </button>
     <h2>edit Post</h2>
-    <form id="edit-form">
+    <form id="form">
         <div class="title">
             <label for="title">Title:</label>
             <input type="text" id="title" name="title" required>
