--- a/new-post.html
+++ b/new-post.html
@@ -52,7 +52,7 @@
         < Back to admin
     </button>
     <h2>new Blog Post</h2>
-    <form id="blog-post-form">
+    <form id="form">
         <div class="title">
             <label for="title">Title:</label>
             <input type="text" id="title" name="title" required>
