made responsive on mobile

--- a/browse.html
+++ b/browse.html
@@ -58,26 +58,30 @@
 
 <main>
     <div class="category-container">
-        <button id="asian">
-            <span id="asian-img"></span>
-            Asian
-        </button>
-        <button id="salad">
-            <span id="salad-img"></span>
-            salad
-        </button>
-        <button id="soup">
-            <span id="soup-img"></span>
-            soup
-        </button>
-        <button id="pasta">
-            <span id="pasta-img"></span>
-            pasta
-        </button>
-        <button id="main-course">
-            <span id="main-course-img"></span>
-            main-course
-        </button>
+        <div class="wrap-1">
+            <button id="asian">
+                <span id="asian-img"></span>
+                Asian
+            </button>
+            <button id="salad">
+                <span id="salad-img"></span>
+                salad
+            </button>
+            <button id="soup">
+                <span id="soup-img"></span>
+                soup
+            </button>
+        </div>
+        <div class="wrap-2">
+            <button id="pasta">
+                <span id="pasta-img"></span>
+                pasta
+            </button>
+            <button id="main-course">
+                <span id="main-course-img"></span>
+                main-course
+            </button>
+        </div>
     </div>
     <button class="btn-black" id="view-all">
         view all
@@ -88,7 +92,7 @@
         <div class="main-contents-display"></div>
     </div>
     <div id="pagination">
-        <button id="previous"> < Previous </button>
+        <button id="previous"> < Previous</button>
         <p id="current-page"></p>
         <button id="next">Next ></button>
     </div>
