--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/styles.css"/>
     <link rel="stylesheet" href="css/login-register.css"/>
     <title>Register</title>
-    <script type="module" src="javascript/app.js" defer></script>
+    <script src="javascript/register.js" defer></script>
     <script src="https://kit.fontawesome.com/5d32d5fe01.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,7 +48,7 @@
         <input type="url" id="avatar" name="avatar" placeholder="optional">
     </div>
     <div class="bio">
-        <label for="bio">bio:</label>
+        <label for="bio">Bio:</label>
         <textarea id="bio" name="bio" placeholder="optional"></textarea>
     </div>
     <button type="submit" class="btn-black" id="register-btn">Register</button>
@@ -56,10 +56,10 @@
     <div id="message"></div>
 </form>
 
-<div class="overlay"></div>
-<div class="successful">
+<div class="overlay" style="display: none;"></div>
+<div class="successful" style="display: none;">
     <p>Registration successful!</p>
-    <button class="btn-black" id="go-to-login">login</button>
+    <button class="btn-black" id="go-to-login">Login</button>
 </div>
 
 </body>
